sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: type mismatch;
 found   : Unit
 required: Boolean
		if (x=0) x+=1
                     ^