sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var x=1
	while (x<getNombreValeurs()-1) {
		if (x=0) x+=1
		if (plusPetit(x+1,x-1)) {
			echange(x+1,x-1)
			x-=1
		}
		else x+=1
	}
	
}
